# dpp_bot

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  todo.md
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/src/: dppBot.cpp  dppBot.hpp
test/: CMakeLists.txt  example.cpp
